name:           reflex-dom-semantic-ui-core
version:        0.0.1
synopsis:       Core bindings for Semantic-UI in Reflex-DOM
category:       Web
maintainer:     Elliot Cameron <eacameron@gmail.com>
copyright:      2018 Elliot Cameron
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    Reflex.Dom.SemanticUi.Core
  hs-source-dirs: .
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-do-bind -O2
  build-depends:
      base
    , ghcjs-dom
    , jsaddle
    , lens
    , mtl
    , reflex-dom-core
    , text
  default-language: Haskell2010
