name:           reflex-dom-semantic-ui-core
version:        0.0.1
synopsis:       Core bindings for Semantic-UI in Reflex-DOM
category:       Web
maintainer:     Elliot Cameron <eacameron@gmail.com>
copyright:      2018 Elliot Cameron
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    Reflex.Dom.SemanticUi.Core
  hs-source-dirs: .
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-do-bind -O2
  build-depends:
      base
    , ghcjs-dom
    , lens
    , mtl
    , reflex-dom-core
    , text

  if impl(ghcjs)
    build-depends: ghcjs-base
  else
    build-depends: jsaddle, lens

  default-language: Haskell2010
